[project]
name = "transporter"
version = "0.1.0"
description = "Keyboard teleoperation for LeKiwi wheels"
requires-python = ">=3.10"
dependencies = [
    "lerobot[feetech]>=0.4.2",
    "paho-mqtt>=2.1.0",
    "pyzmq>=27.0.0",
    "opencv-contrib-python>=4.10.0",
    "numpy>=1.26",
]

[tool.uv]
package = false
